--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,5 +1,5 @@
 PORT=4000
-DB_URI="mongodb://127.0.0.1:27017/DogHandlers"
+DB_URI="mongodb+srv://saeed217:saeed217@cluster0.9cl5qxi.mongodb.net/"
 JWT_SECRET=CASADQWEOIOPRIPOWQIROPQWIROQWIRQPOWIRPOWQKDQWLQMK
 JWT_EXPIRE=5d
 COOKIE_EXPIRE=5
